# model-serving-service

./: .env  Dockerfile  LICENSE  README.md  pyproject.toml
app/: config.py  constants.py  handlers.py  main.py  utils.py
app/api/: main.py
app/api/dependencies/: token.py
app/api/routes/: inference_service.py
app/exceptions/: exceptions.py  token.py
app/schemas/: api_response.py  inference_service.py
app/src/: kserve_client.py  utils.py
app/src/inference_graph/: __init__.py  client.py
app/src/inference_service/: __init__.py  client.py  inference_service.py  utils.py
